# runge-kutta-playground

./: .gitignore  CMakeLists.txt  Dockerfile  bro_amd_what_are_you_doing_jesus  nsight  run
include/: combi.hpp  equations.hpp  io.hpp  solve.hpp  tree.hpp
scripts/: watch_descent.py
src/: CMakeLists.txt  equations.cpp  io.cpp  main.cpp  solve.cpp  tree.cpp
tests/: test.py
